--- a/profile.html
+++ b/profile.html
@@ -115,7 +115,7 @@ ul {
 }
 
 #imc button {
-  background-color: #4CAF50;
+  background-color: #237726;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -125,7 +125,7 @@ ul {
 }
 
 #imc button:hover {
-  background-color: #4CAF50;
+  background-color: #237726;
 }
 
 #imc h3 {
@@ -141,7 +141,7 @@ ul {
 }
 
 #imc table th {
-  background-color: #4CAF50;
+  background-color: #237726;
   color: #fff;
   font-weight: bold;
   padding: 10px;
@@ -370,44 +370,6 @@ ul {
 }
 
 
-       footer {
-  background-color: #4CAF50;
-  padding: 50px 0;
-}
-
-
-
-
-.social-media a {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  background-color: #3b5998;
-  color: #fff;
-  text-align: center;
-  line-height: 40px;
-  border-radius: 50%;
-  margin-right: 10px;
-  transition: background-color 0.2s ease-in-out;
-}
-
-
-
-
-
-
-
-@media screen and (max-width: 768px) {
-  .contact-container,
-  .map-container {
-    width: 100%;
-    max-width: none;
-  }
-
-  .social-media {
-    margin-top: 20px;
-  }
-}
 
 </style>
 
