--- a/regimes.html
+++ b/regimes.html
@@ -5,20 +5,16 @@
   <style>
         /* Header */
         header {
-        background-color: #6fbe3e;
+          background-color: #6fbe3e;
         border-bottom-left-radius: 55px;
         border-bottom-right-radius: 55px;
         color: #fff;
         padding: 20px;
-        position: fixed;
-        width: 98%;
-        top: 0%;
-        left: 0%;
-        right: 0%;
+        height: 100px;
     }
 
     h1 {
-      font-size: 80px;
+      font-size: 40px;
       font-weight: bold;
       text-align: center;
       font-family: Georgia, 'Times New Roman', Times, serif;
