solution probleme page accueil

--- a/articles.html
+++ b/articles.html
@@ -110,7 +110,7 @@
         <h1>Happy Nutrition</h1>
         <nav>
             <ul class="menu">
-                <li><a href="/Acceuil.html">Acceuil</a></li>
+                <li><a href="/accueil.html">accueil</a></li>
                 <li><a href="/pratique.html">Pratique nutritionnelle</a></li>
                 <li><a href="/pratiqueSport.html">Pratique sportive</a></li>
                 <li><a href="/recettes.html">Recettes</a></li>
