--- a/pratique.html
+++ b/pratique.html
@@ -356,7 +356,7 @@ border-top-left-radius: 75px;
       <li><a href="regimes.html">Régimes</a></li>
     </ul>
   </nav>
-  <a href="Acceuil.html" class="connecter-button">Acceuil</a>
+  <a href="accueil.html" class="connecter-button">accueil</a>
 </header>
 
 
