--- a/profile.html
+++ b/profile.html
@@ -387,7 +387,7 @@ ul {
         <li><a href="regimes.html">Régimes</a></li>
       </ul>
     </nav>
-    <a href="Acceuil.html" class="connecter-button">Acceuil</a>
+    <a href="accueil.html" class="connecter-button">accueil</a>
   </header>
         
 
