--- a/recettes.html
+++ b/recettes.html
@@ -19,7 +19,6 @@
       text-align: center;
       font-family: Georgia, 'Times New Roman', Times, serif;
       margin: 0;
-      text-align: center;
     }
 
     header a {
@@ -44,7 +43,6 @@
     }
     
     .connecter-button{
-      float: top;
       font-size: 25px;
       margin-right: 15px;
     }
@@ -318,7 +316,7 @@ border-top-left-radius: 75px;
         <li><a href="regimes.html">Régimes</a></li>
       </ul>
     </nav>
-    <a href="Acceuil.html" class="connecter-button">Acceuil</a>
+    <a href="accueil.html" class="connecter-button">accueil</a>
   </header>
 
 
