--- a/regimes.html
+++ b/regimes.html
@@ -5,7 +5,7 @@
   <style>
         /* Header */
         header {
-          background-color: #6fbe3e;
+        background-color: #6fbe3e;
         border-bottom-left-radius: 55px;
         border-bottom-right-radius: 55px;
         color: #fff;
@@ -18,8 +18,7 @@
       font-weight: bold;
       text-align: center;
       font-family: Georgia, 'Times New Roman', Times, serif;
-      margin-top: 0%;
-      margin-bottom: 0%;
+      margin: 0;
     }
 
     header a {
@@ -323,7 +322,7 @@ ul {
             <li><a href="regimes.html">Régimes</a></li>
           </ul>
         </nav>
-        <a href="Acceuil.html" class="connecter-button">Acceuil</a>
+        <a href="accueil.html" class="connecter-button">accueil</a>
       </header>
   
 
