Finalisation des pages sans comptes

--- a/SC_accueil.html
+++ b/SC_accueil.html
@@ -122,14 +122,18 @@
             padding: .4em;
             border-radius: 50px;
             margin: 20px;
+            text-align: center;
+            font-size: 25px;
+            font-weight: bold;
         }
 
         .card-image {
             background-color: rgb(236, 236, 236);
             margin: auto;
-            width: 98%;
+            width: 100%;
             height: 85%;
             border-radius: 50px 50px 0 0;
+            object-fit: cover;
         }
         
         table{
@@ -193,20 +197,20 @@
         <table>
             <td>
                 <div class="card carte1">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_tuberculose.jpg" alt="Tuberculose">
+                    <div class="category"> Tuberculose </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_resolution.jfif" alt="Resolution">
+                    <div class="category"> Résolutions 2023 </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_grippeAviaire.jpg" alt="Grippe_Aviaire">
+                    <div class="category"> Grippe Aviaire </div>
                 </div>
             </td>
         </table>
@@ -217,20 +221,20 @@
         <table>
             <td>
                 <div class="card carte1">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_groupeAliment.jpg" alt="Groupe_Aliment">
+                    <div class="category"> Groupe d'Aliments </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_controlePortion.jpg" alt="Controle_des_Portions">
+                    <div class="category"> Contrôle des portions </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_mangerExterieur.jpg" alt="Manger_a_Exterieur">
+                    <div class="category"> Manger à l'extérieur </div>
                 </div>
             </td>
         </table>
@@ -241,20 +245,20 @@
         <table>
             <td>
                 <div class="card carte1">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_course.jpeg" alt="Course_a_Pied">
+                    <div class="category"> Course à Pied </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_swiming.jpg" alt="Natation">
+                    <div class="category"> Natation </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_cyclisme.jpg" alt="Cyclisme">
+                    <div class="category"> Clyclisme </div>
                 </div>
             </td>
         </table>
@@ -265,20 +269,20 @@
         <table>
             <td>
                 <div class="card carte1">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_Sandwich.jpg" alt="Grilled_Cheese">
+                    <div class="category"> Sandwich au Fromage </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_chickenParmesan.jpg" alt="Chicken_Parmesan">
+                    <div class="category"> Poulet à la Parmesane </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_avocado--scaled.jpeg" alt="Avocado_Toast">
+                    <div class="category"> Toast à l'Avocat </div>
                 </div>
             </td>
         </table>
@@ -289,24 +293,24 @@
         <table>
             <td>
                 <div class="card carte1">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_dash.png" alt="Dash">
+                    <div class="category"> DASH </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_vegan.png" alt="Vegan">
+                    <div class="category"> Vegan </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <div class="card-image"></div>
-                    <div class="category"> Illustration </div>
+                    <img class="card-image" src="/IM_mediterraneen.png" alt="Mediterraneen">
+                    <div class="category"> Méditerranéen </div>
                 </div>
             </td>
         </table>
-        <h2><a href="/SC_recettes.html">Voir tous les régimes</a></h2>
+        <h2><a href="/SC_regimes.html">Voir tous les régimes</a></h2>
     </div>
 
     <footer>
