--- a/SC_articles.html
+++ b/SC_articles.html
@@ -50,17 +50,16 @@
         /*Corps de la page*/
         body {
             font-family: Arial, sans-serif;
-            font-size: 16px;
+            background-image: url('IM_background.png');
+            background-size: 1000px;
+            background-attachment: fixed;
         }
-
         h2 {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-
-        ul {
-            list-style: lower-alpha;
+            width: fit-content;
+            margin: 50px auto;
+            padding: 15px;
+            background-color: rgb(255, 255, 255,0.9);
+            border-radius: 15px;
         }
 
 
@@ -74,6 +73,64 @@
             border-top-left-radius: 75px;
         }
 
+        /*Actualité*/
+        .card {
+            display: flex;
+            align-items: center;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0px 2px 10px rgba(0,0,0,0.3);
+            width: 800px;
+            margin: 30px auto;
+            transition: all 0.3s;
+        }
+        .card:hover {
+            box-shadow: 0px 2px 25px rgba(0,0,0,0.7);
+        }
+
+        .card img {
+            width: 300px;
+            height: 250px;
+            border-top-left-radius: 15px;
+            border-bottom-left-radius: 15px;
+            object-fit: cover;
+        }
+
+        .details {
+            padding: 20px;
+        }
+
+        .details a {
+            padding: 10px 20px;
+            background-color: #2a33d5;
+            color: #fff;
+            font-size: 16px;
+            text-decoration: none;
+            border-radius: 10px;
+            margin: 25px;
+            transition: all 0.3s;
+        }
+        .details a:hover {
+            background-color: #0c1393;
+        }
+
+        /*Plus d'articles*/
+        .plusArticle{
+            text-align: center;
+            margin: 100px;
+        }
+        .plusArticle a{
+            text-decoration: none;
+            font-weight: bold;
+            background-color: #2a33d5;
+            color: #fff;
+            padding: 15px;
+            border-radius: 15px;
+            transition: all 0.3s;
+        }
+        .plusArticle a:hover{
+            background-color: #0c1393;
+        }
         /*Site dynamique*/
         @media screen and (max-width: 860px) {
             header nav{
@@ -98,7 +155,50 @@
         <a class="connecter-button" href="/SC_accueil.html">Accueil</a>
     </header>
 
+    <h2> Actualité Santé</h2>
+    <div class="card">
+        <img src="/IM_grippeAviaire.jpg" alt="Grippe_Aviaire">
+        <div class="details">
+            <h3>Grippe Aviaire</h3>
+            <p>Quelles est la situation actuelle en France ?</p>
+            <a href="https://www.santepubliquefrance.fr/les-actualites/2023/grippe-aviaire-quelle-est-la-situation-en-france-et-dans-le-monde">Voir l'article</a>
+        </div>
+    </div>
 
+
+    <div class="card">
+        <img src="/IM_tuberculose.jpg" alt="Tuberculose">
+        <div class="details">
+            <h3> Tuberculose </h3>
+            <p>Les chiffres de 2021.</p>
+            <a href="https://www.santepubliquefrance.fr/les-actualites/2023/tuberculose-en-france-les-chiffres-2021">Voir l'article</a>
+        </div>
+    </div>
+
+
+    <div class="card">
+        <img src="/IM_resolution.jfif" alt="Résolutions">
+        <div class="details">
+            <h3>Les résolutions 2023</h3>
+            <p>Conseils et astuces pour adopter les bons gestes.</p>
+            <a href="https://www.santepubliquefrance.fr/les-actualites/2023/les-bonnes-resolutions-2023-conseils-et-astuces-pour-adopter-les-bons-gestes">Voir l'article</a>
+        </div>
+    </div>
+    
+
+    <div class="card">
+        <img src="/IM_santePublique.jpg" alt="Santé_Publique">
+        <div class="details">
+            <h3>Santé publique France</h3>
+            <p>Rétrospective de l'année 2022.</p>
+            <a href="https://www.santepubliquefrance.fr/les-actualites/2023/sante-publique-france-retrospective-de-l-annee-2022">Voir l'article</a>
+        </div>
+    </div>
+
+
+    <div class="plusArticle">
+        <a href="https://www.santepubliquefrance.fr/les-actualites">RETROUVER PLUS D'ARTICLES ICI</a>
+    </div>
 
     <footer>
         <h3>Contacter Nous</h3>
