Final pages sans compte

--- a/AC_profil.html
+++ b/AC_profil.html
@@ -82,11 +82,11 @@
         <h1> Happy Nutrition </h1>
         <nav>
             <ul>
-                <li><a class="active" href="/AC_alimentation.html">Alimentation</a></li>
-                <li><a href="/AC_journal.html">Journal</a></li>
+                <li><a class="active" href="AC_alimentation.html">Alimentation</a></li>
+                <li><a href="AC_journal.html">Journal</a></li>
             </ul>
         </nav>
-        <a class="connecter-button" href="/SC_accueil.html">Accueil</a>
+        <a class="connecter-button" href="SC_accueil.html">Accueil</a>
     </header>
 
     <div class="donnees" >
