--- a/SC_accueil.html
+++ b/SC_accueil.html
@@ -174,15 +174,15 @@
         <h1> Happy Nutrition </h1>
         <nav>
             <ul>
-                <li><a class="active" href="/SC_articles.html">Articles</a></li>
-                <li><a href="/SC_pratique.html">Pratique nutritionnelle</a></li>
-                <li><a href="/SC_pratiqueSport.html">Pratique sportive</a></li>
-                <li><a href="/SC_recettes.html">Recettes</a></li>
-                <li><a href="/SC_regimes.html">Régimes</a></li>
+                <li><a class="active" href="SC_articles.html">Articles</a></li>
+                <li><a href="SC_pratique.html">Pratique nutritionnelle</a></li>
+                <li><a href="SC_pratiqueSport.html">Pratique sportive</a></li>
+                <li><a href="SC_recettes.html">Recettes</a></li>
+                <li><a href="SC_regimes.html">Régimes</a></li>
             </ul>
         </nav>
-        <a class="connecter-button" href="/SC_connecter.html">Se Connecter</a>
-        <a class="connecter-button" href="/SC_inscription.html">S'inscrire</a>
+        <a class="connecter-button" href="SC_connecter.html">Se Connecter</a>
+        <a class="connecter-button" href="SC_inscription.html">S'inscrire</a>
     </header>
 
     <div class="texteaccueil">
@@ -197,120 +197,120 @@
         <table>
             <td>
                 <div class="card carte1">
-                    <img class="card-image" src="/IM_tuberculose.jpg" alt="Tuberculose">
+                    <img class="card-image" src="IM_tuberculose.jpg" alt="Tuberculose">
                     <div class="category"> Tuberculose </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <img class="card-image" src="/IM_resolution.jfif" alt="Resolution">
+                    <img class="card-image" src="IM_resolution.jfif" alt="Resolution">
                     <div class="category"> Résolutions 2023 </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <img class="card-image" src="/IM_grippeAviaire.jpg" alt="Grippe_Aviaire">
+                    <img class="card-image" src="IM_grippeAviaire.jpg" alt="Grippe_Aviaire">
                     <div class="category"> Grippe Aviaire </div>
                 </div>
             </td>
         </table>
-        <h2><a href="/SC_articles.html">Voir tous les articles</a></h2>
+        <h2><a href="SC_articles.html">Voir tous les articles</a></h2>
     </div>
 
     <div class="article-container pratique">
         <table>
             <td>
                 <div class="card carte1">
-                    <img class="card-image" src="/IM_groupeAliment.jpg" alt="Groupe_Aliment">
+                    <img class="card-image" src="IM_groupeAliment.jpg" alt="Groupe_Aliment">
                     <div class="category"> Groupe d'Aliments </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <img class="card-image" src="/IM_controlePortion.jpg" alt="Controle_des_Portions">
+                    <img class="card-image" src="IM_controlePortion.jpg" alt="Controle_des_Portions">
                     <div class="category"> Contrôle des portions </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <img class="card-image" src="/IM_mangerExterieur.jpg" alt="Manger_a_Exterieur">
+                    <img class="card-image" src="IM_mangerExterieur.jpg" alt="Manger_a_Exterieur">
                     <div class="category"> Manger à l'extérieur </div>
                 </div>
             </td>
         </table>
-        <h2><a href="/SC_pratique.html">Voir toutes les pratiques nutritionnelles</a></h2>
+        <h2><a href="SC_pratique.html">Voir toutes les pratiques nutritionnelles</a></h2>
     </div>
 
     <div class="article-container pratiqueSport">
         <table>
             <td>
                 <div class="card carte1">
-                    <img class="card-image" src="/IM_course.jpeg" alt="Course_a_Pied">
+                    <img class="card-image" src="IM_course.jpeg" alt="Course_a_Pied">
                     <div class="category"> Course à Pied </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <img class="card-image" src="/IM_swiming.jpg" alt="Natation">
+                    <img class="card-image" src="IM_swiming.jpg" alt="Natation">
                     <div class="category"> Natation </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <img class="card-image" src="/IM_cyclisme.jpg" alt="Cyclisme">
+                    <img class="card-image" src="IM_cyclisme.jpg" alt="Cyclisme">
                     <div class="category"> Clyclisme </div>
                 </div>
             </td>
         </table>
-        <h2><a href="/SC_pratiqueSport.html">Voir toutes les pratiques sportives</a></h2>
+        <h2><a href="SC_pratiqueSport.html">Voir toutes les pratiques sportives</a></h2>
     </div>
 
     <div class="article-container recette">
         <table>
             <td>
                 <div class="card carte1">
-                    <img class="card-image" src="/IM_Sandwich.jpg" alt="Grilled_Cheese">
+                    <img class="card-image" src="IM_Sandwich.jpg" alt="Grilled_Cheese">
                     <div class="category"> Sandwich au Fromage </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <img class="card-image" src="/IM_chickenParmesan.jpg" alt="Chicken_Parmesan">
+                    <img class="card-image" src="IM_chickenParmesan.jpg" alt="Chicken_Parmesan">
                     <div class="category"> Poulet à la Parmesane </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <img class="card-image" src="/IM_avocado--scaled.jpeg" alt="Avocado_Toast">
+                    <img class="card-image" src="IM_avocado--scaled.jpeg" alt="Avocado_Toast">
                     <div class="category"> Toast à l'Avocat </div>
                 </div>
             </td>
         </table>
-        <h2><a href="/SC_recettes.html">Voir toutes les recettes</a></h2>
+        <h2><a href="SC_recettes.html">Voir toutes les recettes</a></h2>
     </div>
 
     <div class="article-container regime">
         <table>
             <td>
                 <div class="card carte1">
-                    <img class="card-image" src="/IM_dash.png" alt="Dash">
+                    <img class="card-image" src="IM_dash.png" alt="Dash">
                     <div class="category"> DASH </div>
                 </div>
             </td>
             <td>
                 <div class="card carte2">
-                    <img class="card-image" src="/IM_vegan.png" alt="Vegan">
+                    <img class="card-image" src="IM_vegan.png" alt="Vegan">
                     <div class="category"> Vegan </div>
                 </div>
             </td>
             <td>
                 <div class="card carte3">
-                    <img class="card-image" src="/IM_mediterraneen.png" alt="Mediterraneen">
+                    <img class="card-image" src="IM_mediterraneen.png" alt="Mediterraneen">
                     <div class="category"> Méditerranéen </div>
                 </div>
             </td>
         </table>
-        <h2><a href="/SC_regimes.html">Voir tous les régimes</a></h2>
+        <h2><a href="SC_regimes.html">Voir tous les régimes</a></h2>
     </div>
 
     <footer>
