--- a/SC_articles.html
+++ b/SC_articles.html
@@ -146,18 +146,18 @@
         <h1> Happy Nutrition </h1>
         <nav>
             <ul>
-                <li><a href="/SC_pratique.html">Pratique nutritionnelle</a></li>
-                <li><a href="/SC_pratiqueSport.html">Pratique sportive</a></li>
-                <li><a href="/SC_recettes.html">Recettes</a></li>
-                <li><a href="/SC_regimes.html">Régimes</a></li>
+                <li><a href="SC_pratique.html">Pratique nutritionnelle</a></li>
+                <li><a href="SC_pratiqueSport.html">Pratique sportive</a></li>
+                <li><a href="SC_recettes.html">Recettes</a></li>
+                <li><a href="SC_regimes.html">Régimes</a></li>
             </ul>
         </nav>
-        <a class="connecter-button" href="/SC_accueil.html">Accueil</a>
+        <a class="connecter-button" href="SC_accueil.html">Accueil</a>
     </header>
 
     <h2> Actualité Santé</h2>
     <div class="card">
-        <img src="/IM_grippeAviaire.jpg" alt="Grippe_Aviaire">
+        <img src="IM_grippeAviaire.jpg" alt="Grippe_Aviaire">
         <div class="details">
             <h3>Grippe Aviaire</h3>
             <p>Quelles est la situation actuelle en France ?</p>
@@ -167,7 +167,7 @@
 
 
     <div class="card">
-        <img src="/IM_tuberculose.jpg" alt="Tuberculose">
+        <img src="IM_tuberculose.jpg" alt="Tuberculose">
         <div class="details">
             <h3> Tuberculose </h3>
             <p>Les chiffres de 2021.</p>
@@ -177,7 +177,7 @@
 
 
     <div class="card">
-        <img src="/IM_resolution.jfif" alt="Résolutions">
+        <img src="IM_resolution.jfif" alt="Résolutions">
         <div class="details">
             <h3>Les résolutions 2023</h3>
             <p>Conseils et astuces pour adopter les bons gestes.</p>
@@ -187,7 +187,7 @@
     
 
     <div class="card">
-        <img src="/IM_santePublique.jpg" alt="Santé_Publique">
+        <img src="IM_santePublique.jpg" alt="Santé_Publique">
         <div class="details">
             <h3>Santé publique France</h3>
             <p>Rétrospective de l'année 2022.</p>
