--- a/SC_pratique.html
+++ b/SC_pratique.html
@@ -127,13 +127,13 @@
         <h1> Happy Nutrition </h1>
         <nav>
             <ul>
-                <li><a href="/s*">Articles</a></li>
-                <li><a href="/SC_pratiqueSport.html">Pratique sportive</a></li>
-                <li><a href="/SC_recettes.html">Recettes</a></li>
-                <li><a href="/SC_regimes.html">Régimes</a></li>
+                <li><a href="SC_articles.html">Articles</a></li>
+                <li><a href="SC_pratiqueSport.html">Pratique sportive</a></li>
+                <li><a href="SC_recettes.html">Recettes</a></li>
+                <li><a href="SC_regimes.html">Régimes</a></li>
             </ul>
         </nav>
-        <a class="connecter-button" href="/SC_accueil.html">Accueil</a>
+        <a class="connecter-button" href="SC_accueil.html">Accueil</a>
     </header>
 
     <div class="container">
