--- a/SC_pratiqueSport.html
+++ b/SC_pratiqueSport.html
@@ -104,31 +104,31 @@
         <h1> Happy Nutrition </h1>
         <nav>
             <ul>
-                <li><a href="/SC_articles.html">Articles</a></li>
-                <li><a href="/SC_pratique.html">Pratique nutritionnelle</a></li>
-                <li><a href="/SC_recettes.html">Recettes</a></li>
-                <li><a href="/SC_regimes.html">Régimes</a></li>
+                <li><a href="SC_articles.html">Articles</a></li>
+                <li><a href="SC_pratique.html">Pratique nutritionnelle</a></li>
+                <li><a href="SC_recettes.html">Recettes</a></li>
+                <li><a href="SC_regimes.html">Régimes</a></li>
             </ul>
         </nav>
-        <a class="connecter-button" href="/SC_accueil.html">Accueil</a>
+        <a class="connecter-button" href="SC_accueil.html">Accueil</a>
     </header>
 
     <div class="sport">
         <h2>Course à pied</h2>
         <p>La course à pied est un excellent moyen de rester en forme. Elle améliore l'endurance cardiovasculaire, renforce les muscles des jambes et peut aider à perdre du poids. Pour commencer, il suffit d'avoir une paire de chaussures confortables et de se lancer !</p>
-        <img src="/IM_course.jpeg">
+        <img src="IM_course.jpeg">
     </div>
 
     <div class="sport">
         <h2>Natation</h2>
         <p>La natation est un sport complet qui sollicite tous les muscles du corps. Elle est également très douce pour les articulations, ce qui en fait une pratique idéale pour les personnes souffrant de douleurs articulaires. Pour commencer, il suffit de trouver une piscine près de chez soi et de se jeter à l'eau !</p>
-        <img src="/IM_swiming.jpg">
+        <img src="IM_swiming.jpg">
     </div>
 
     <div class="sport">
         <h2>Cyclisme</h2>
         <p>Le cyclisme est un excellent moyen de se déplacer tout en faisant de l'exercice. Il renforce les muscles des jambes et des fesses, améliore l'endurance cardiovasculaire et peut aider à perdre du poids. Pour commencer, il suffit d'avoir un vélo confortable et de se lancer sur les routes ou les pistes cyclables !</p>
-        <img src="/IM_cyclisme.jpg">
+        <img src="IM_cyclisme.jpg">
     </div>
 
 
