--- a/SC_recettes.html
+++ b/SC_recettes.html
@@ -149,19 +149,19 @@
         <h1> Happy Nutrition </h1>
         <nav>
             <ul>
-                <li><a href="/SC_articles.html">Articles</a></li>
-                <li><a href="/SC_pratique.html">Pratique nutritionnelle</a></li>
-                <li><a href="/SC_pratiqueSport.html">Pratique sportive</a></li>
-                <li><a href="/SC_regimes.html">Régimes</a></li>
+                <li><a href="SC_articles.html">Articles</a></li>
+                <li><a href="SC_pratique.html">Pratique nutritionnelle</a></li>
+                <li><a href="SC_pratiqueSport.html">Pratique sportive</a></li>
+                <li><a href="SC_regimes.html">Régimes</a></li>
             </ul>
         </nav>
-        <a class="connecter-button" href="/SC_accueil.html">Accueil</a>
+        <a class="connecter-button" href="SC_accueil.html">Accueil</a>
     </header>
 
 
     <h2>Recette du Jour</h2>
     <div class="recipe-card">
-        <img src="./IM_Sandwich.jpg">
+        <img src="IM_Sandwich.jpg">
         <div class="recipe-details">
             <h3>Sandwich au fromage</h3>
             <p>Un sandwich simple et délicieux qui plaira à tous.</p>
@@ -172,7 +172,7 @@
 
     <h2>Recette d'hier</h2>
     <div class="recipe-card">
-        <img src="/IM_saladeNicoise.jpeg">
+        <img src="IM_saladeNicoise.jpeg">
         <div class="recipe-details">
             <h3> Salade Niçoise </h3>
             <p>Une salade légère mais bien rempli.</p>
@@ -183,7 +183,7 @@
 
     <h2>Autres recettes</h2>
     <div class="recipe-card">
-        <img src="/IM_chickenParmesan.jpg">
+        <img src="IM_chickenParmesan.jpg">
         <div class="recipe-details">
             <h3>Poulet à la Parmesane</h3>
             <p>Un plat italien classique, parfait pour toutes les occasion.</p>
@@ -193,7 +193,7 @@
     <br>
 
     <div class="recipe-card">
-        <img src="/IM_avocado--scaled.jpeg">
+        <img src="IM_avocado--scaled.jpeg">
         <div class="recipe-details">
             <h3>Toast à l'avocat</h3>
             <p>Petit-déjeuner sain et rapide ou snack facile à préparer.</p>
