--- a/SC_regimes.html
+++ b/SC_regimes.html
@@ -122,13 +122,13 @@
         <h1> Happy Nutrition </h1>
         <nav>
             <ul>
-                <li><a href="/SC_articles.html">Articles</a></li>
-                <li><a href="/SC_pratique.html">Pratique nutritionnelle</a></li>
-                <li><a href="/SC_pratiqueSport.html">Pratique sportive</a></li>
-                <li><a href="/SC_recettes.html">Recettes</a></li>
+                <li><a href="SC_articles.html">Articles</a></li>
+                <li><a href="SC_pratique.html">Pratique nutritionnelle</a></li>
+                <li><a href="SC_pratiqueSport.html">Pratique sportive</a></li>
+                <li><a href="SC_recettes.html">Recettes</a></li>
             </ul>
         </nav>
-        <a class="connecter-button" href="/SC_accueil.html">Accueil</a>
+        <a class="connecter-button" href="SC_accueil.html">Accueil</a>
     </header>
 
     <div class="Introduction">
