--- a/SC_connecter.html
+++ b/SC_connecter.html
@@ -88,7 +88,7 @@
         </form>
 
         <p>*Je n'ai pas encore de compte*</p>
-        <a href="/SC_inscription.html" class="inscription">S'inscrire</a>
+        <a href="SC_inscription.html" class="inscription">S'inscrire</a>
    
     </div>
 </body>
