Ajout un lien dans IMC

--- a/AC_alimentation.html
+++ b/AC_alimentation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Alimentationtion</title>
+    <title>Alimentation</title>
     <style>
         /* Header */
         header {
@@ -175,7 +175,8 @@
                 <label for="height">Taille (cm) :</label><br>
                 <input type="number" step="0.01" id="height" name="height" required>
                 
-                <input type="submit" value="Calculer">
+                <input type="submit" value="Calculer"><br>
+                <input type="submit" value="Calculer à partir de mes données personnelles">
             </form>
     
             <div id="imcResult" class="imcResult"></div><br>
